Complete phone password reset pages with green morphic design

--- a/phone-password-reset-verify.html
+++ b/phone-password-reset-verify.html
@@ -4,18 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verify Reset Code - ZimCrowd</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Space Grotesk', sans-serif;
+            background: url('assets/images/pexels-ayaka-kato-1441033-2860905.jpg') center/cover no-repeat;
+            color: white;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(25, 26, 35, 0.92) 0%, rgba(56, 231, 123, 0.15) 100%);
+            z-index: 0;
+        }
+
         .verify-container {
-            max-width: 400px;
-            margin: 2rem auto;
-            padding: 2rem;
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 16px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            width: 100%;
+            max-width: 480px;
+            background: rgba(255, 255, 255, 0.08);
+            backdrop-filter: blur(30px);
+            -webkit-backdrop-filter: blur(30px);
+            border-radius: 24px;
+            padding: 50px 40px;
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            box-shadow: 
+                0 0 60px rgba(56, 231, 123, 0.2),
+                0 0 120px rgba(56, 231, 123, 0.15),
+                0 0 180px rgba(56, 231, 123, 0.1),
+                0 25px 50px rgba(56, 231, 123, 0.12),
+                0 0 0 1px rgba(56, 231, 123, 0.08),
+                inset 0 1px 0 rgba(255, 255, 255, 0.12);
+            position: relative;
+            z-index: 1;
+            animation: cardEntrance 0.8s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
+        @keyframes cardEntrance {
+            0% {
+                opacity: 0;
+                transform: translateY(30px) scale(0.95);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
         }
 
         .verify-header {
@@ -24,29 +74,34 @@
         }
 
         .verify-header h1 {
-            color: #1a365d;
-            font-size: 1.8rem;
+            color: rgba(255, 255, 255, 0.95);
+            font-size: 32px;
             font-weight: 700;
-            margin-bottom: 0.5rem;
+            margin-bottom: 12px;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.8));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .verify-header p {
-            color: #64748b;
-            font-size: 0.95rem;
+            color: rgba(255, 255, 255, 0.6);
+            font-size: 16px;
             line-height: 1.5;
-            margin-bottom: 1rem;
+            margin-bottom: 16px;
         }
 
         .phone-display {
-            background: rgba(59, 130, 246, 0.1);
-            border: 1px solid rgba(59, 130, 246, 0.3);
-            color: #1d4ed8;
-            padding: 0.75rem 1rem;
-            border-radius: 8px;
-            font-size: 0.9rem;
+            background: rgba(56, 231, 123, 0.15);
+            border: 1px solid rgba(56, 231, 123, 0.4);
+            color: #38e77b;
+            padding: 12px 16px;
+            border-radius: 12px;
+            font-size: 15px;
             font-weight: 500;
             text-align: center;
-            margin-bottom: 1.5rem;
+            margin-bottom: 24px;
+            text-shadow: 0 0 10px rgba(56, 231, 123, 0.3);
         }
 
         .otp-inputs {
@@ -59,47 +114,56 @@
         .otp-input {
             width: 3rem;
             height: 3rem;
-            border: 2px solid #e2e8f0;
-            border-radius: 8px;
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            border-radius: 12px;
             text-align: center;
             font-size: 1.5rem;
             font-weight: 600;
-            transition: all 0.2s ease;
-            background: #ffffff;
+            font-family: 'Space Grotesk', sans-serif;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            background: rgba(255, 255, 255, 0.08);
+            color: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
 
         .otp-input:focus {
             outline: none;
-            border-color: #3b82f6;
-            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+            border-color: rgba(56, 231, 123, 0.6);
+            background: rgba(255, 255, 255, 0.12);
+            box-shadow: 0 0 0 4px rgba(56, 231, 123, 0.2), 0 0 20px rgba(56, 231, 123, 0.3);
+            color: white;
         }
 
         .otp-input.filled {
-            border-color: #10b981;
-            background: rgba(16, 185, 129, 0.05);
+            border-color: rgba(56, 231, 123, 0.8);
+            background: rgba(56, 231, 123, 0.1);
+            color: #38e77b;
         }
 
         .btn-primary {
             width: 100%;
-            padding: 0.875rem 1.5rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            padding: 16px 24px;
+            background: linear-gradient(135deg, #38e77b, #34d399);
+            color: #0f172a;
             border: none;
-            border-radius: 8px;
-            font-size: 1rem;
-            font-weight: 600;
+            border-radius: 12px;
+            font-size: 16px;
+            font-weight: 700;
             cursor: pointer;
-            transition: all 0.2s ease;
+            font-family: 'Space Grotesk', sans-serif;
+            transition: all 0.3s ease;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 0.5rem;
-            margin-bottom: 1rem;
+            margin-bottom: 16px;
+            margin-top: 10px;
         }
 
         .btn-primary:hover:not(:disabled) {
-            transform: translateY(-1px);
-            box-shadow: 0 10px 20px rgba(102, 126, 234, 0.3);
+            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(56, 231, 123, 0.3);
         }
 
         .btn-primary:disabled {
@@ -115,59 +179,83 @@
         .resend-btn {
             background: none;
             border: none;
-            color: #3b82f6;
-            font-size: 0.9rem;
+            color: #38e77b;
+            font-size: 14px;
             font-weight: 500;
             cursor: pointer;
             text-decoration: underline;
-            margin-top: 1rem;
+            margin-top: 16px;
+            font-family: 'Space Grotesk', sans-serif;
+            transition: all 0.3s ease;
+            text-shadow: 0 0 10px rgba(56, 231, 123, 0.3);
+        }
+
+        .resend-btn:hover:not(:disabled) {
+            color: #34d399;
+            text-shadow: 0 0 15px rgba(56, 231, 123, 0.5);
         }
 
         .resend-btn:disabled {
-            color: #9ca3af;
+            color: rgba(255, 255, 255, 0.3);
             cursor: not-allowed;
             text-decoration: none;
+            text-shadow: none;
         }
 
         .resend-timer {
-            color: #6b7280;
-            font-size: 0.8rem;
-            margin-top: 0.5rem;
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 12px;
+            margin-top: 8px;
         }
 
         .back-link {
             display: block;
             text-align: center;
-            margin-top: 1.5rem;
-            color: #64748b;
+            margin-top: 24px;
+            padding-top: 20px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            color: #38e77b;
             text-decoration: none;
-            font-size: 0.9rem;
-            transition: color 0.2s ease;
+            font-size: 14px;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            text-shadow: 0 0 10px rgba(56, 231, 123, 0.3);
         }
 
         .back-link:hover {
-            color: #3b82f6;
+            color: #34d399;
+            text-shadow: 0 0 15px rgba(56, 231, 123, 0.5);
+        }
+
+        @media (max-width: 768px) {
+            .verify-container {
+                padding: 30px 25px;
+            }
+
+            .verify-header h1 {
+                font-size: 28px;
+            }
         }
 
         .error-message {
-            background: rgba(239, 68, 68, 0.1);
-            border: 1px solid rgba(239, 68, 68, 0.3);
-            color: #dc2626;
-            padding: 0.75rem 1rem;
-            border-radius: 8px;
-            font-size: 0.9rem;
-            margin-bottom: 1rem;
+            background: rgba(239, 68, 68, 0.2);
+            border: 1px solid rgba(239, 68, 68, 0.4);
+            color: #ef4444;
+            padding: 16px;
+            border-radius: 12px;
+            font-size: 14px;
+            margin-bottom: 20px;
             display: none;
         }
 
         .success-message {
-            background: rgba(34, 197, 94, 0.1);
-            border: 1px solid rgba(34, 197, 94, 0.3);
-            color: #16a34a;
-            padding: 0.75rem 1rem;
-            border-radius: 8px;
-            font-size: 0.9rem;
-            margin-bottom: 1rem;
+            background: rgba(56, 231, 123, 0.2);
+            border: 1px solid rgba(56, 231, 123, 0.4);
+            color: #38e77b;
+            padding: 16px;
+            border-radius: 12px;
+            font-size: 14px;
+            margin-bottom: 20px;
             display: none;
         }
     </style>
