Add unified password reset with phone and email support, rename files to generic names

--- a/password-reset-new.html
+++ b/password-reset-new.html
@@ -303,7 +303,7 @@
         <div class="reset-header">
             <h1><i class="fas fa-lock"></i> Set New Password</h1>
             <p>Create a strong password for your account</p>
-            <div id="phoneDisplay" class="phone-display"></div>
+            <div id="identifierDisplay" class="phone-display"></div>
         </div>
 
         <div id="errorMessage" class="error-message"></div>
@@ -375,7 +375,7 @@
             </button>
         </form>
 
-        <a href="phone-password-reset-verify.html" class="back-link">
+        <a href="password-reset-verify.html" class="back-link">
             <i class="fas fa-arrow-left"></i> Back to Verification
         </a>
     </div>
@@ -384,18 +384,28 @@
         document.addEventListener('DOMContentLoaded', function() {
             const urlParams = new URLSearchParams(window.location.search);
             const phoneFromUrl = urlParams.get('phone');
+            const emailFromUrl = urlParams.get('email');
             const phoneFromStorage = localStorage.getItem('resetPhone');
-            const phone = phoneFromUrl || phoneFromStorage;
+            const emailFromStorage = localStorage.getItem('resetEmail');
             const resetToken = localStorage.getItem('resetToken');
 
-            if (!phone || !resetToken) {
-                window.location.href = 'phone-password-reset-request.html';
+            const phone = phoneFromUrl || phoneFromStorage;
+            const email = emailFromUrl || emailFromStorage;
+            const method = phone ? 'phone' : 'email';
+            const identifier = phone || email;
+
+            if (!identifier || !resetToken) {
+                window.location.href = 'password-reset-request.html';
                 return;
             }
 
-            // Display phone number
-            const phoneDisplay = document.getElementById('phoneDisplay');
-            phoneDisplay.textContent = formatPhoneForDisplay(phone);
+            // Display identifier
+            const identifierDisplay = document.getElementById('identifierDisplay');
+            if (method === 'phone') {
+                identifierDisplay.textContent = formatPhoneForDisplay(identifier);
+            } else {
+                identifierDisplay.textContent = identifier;
+            }
 
             const resetForm = document.getElementById('resetForm');
             const submitBtn = document.getElementById('submitBtn');
@@ -485,16 +495,20 @@
                 submitSpinner.style.display = 'inline-block';
 
                 try {
-                    const response = await fetch('https://zimcrowd-backend.vercel.app/api/phone-auth/reset-password-phone', {
+                    const endpoint = method === 'phone'
+                        ? 'https://zimcrowd-backend.vercel.app/api/phone-auth/reset-password-phone'
+                        : 'https://zimcrowd-backend.vercel.app/api/email-auth/reset-password-email';
+                    
+                    const body = method === 'phone'
+                        ? { phone: identifier, otp: resetToken, newPassword: newPassword }
+                        : { email: identifier, otp: resetToken, newPassword: newPassword };
+
+                    const response = await fetch(endpoint, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
                         },
-                        body: JSON.stringify({
-                            phone: phone,
-                            otp: resetToken,
-                            newPassword: newPassword
-                        })
+                        body: JSON.stringify(body)
                     });
 
                     const data = await response.json();
@@ -502,7 +516,9 @@
                     if (data.success) {
                         // Clear localStorage
                         localStorage.removeItem('resetPhone');
+                        localStorage.removeItem('resetEmail');
                         localStorage.removeItem('resetToken');
+                        localStorage.removeItem('resetMethod');
 
                         showSuccess('Password reset successfully!');
                         setTimeout(() => {
