--- a/password-reset-request.html
+++ b/password-reset-request.html
@@ -225,6 +225,48 @@
             margin-top: 6px;
         }
 
+        .method-toggle {
+            display: flex;
+            gap: 12px;
+            margin-bottom: 24px;
+            background: rgba(255, 255, 255, 0.05);
+            padding: 6px;
+            border-radius: 12px;
+        }
+
+        .method-btn {
+            flex: 1;
+            padding: 12px 20px;
+            background: transparent;
+            border: none;
+            border-radius: 8px;
+            color: rgba(255, 255, 255, 0.6);
+            font-size: 14px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Space Grotesk', sans-serif;
+        }
+
+        .method-btn.active {
+            background: linear-gradient(135deg, #38e77b, #34d399);
+            color: #0f172a;
+            box-shadow: 0 4px 12px rgba(56, 231, 123, 0.3);
+        }
+
+        .method-btn:hover:not(.active) {
+            background: rgba(255, 255, 255, 0.08);
+            color: rgba(255, 255, 255, 0.9);
+        }
+
+        .input-group {
+            display: none;
+        }
+
+        .input-group.active {
+            display: block;
+        }
+
         @media (max-width: 768px) {
             .reset-container {
                 padding: 30px 25px;
@@ -239,30 +281,54 @@
 <body>
     <div class="reset-container">
         <div class="reset-header">
-            <h1><i class="fas fa-mobile-alt"></i> Reset Password</h1>
-            <p>Enter your phone number and we'll send you a reset code</p>
+            <h1><i class="fas fa-key"></i> Reset Password</h1>
+            <p>Choose your preferred method to receive a reset code</p>
         </div>
 
         <div id="errorMessage" class="error-message"></div>
         <div id="successMessage" class="success-message"></div>
 
+        <div class="method-toggle">
+            <button type="button" class="method-btn active" id="phoneMethodBtn">
+                <i class="fas fa-mobile-alt"></i> Phone
+            </button>
+            <button type="button" class="method-btn" id="emailMethodBtn">
+                <i class="fas fa-envelope"></i> Email
+            </button>
+        </div>
+
         <form id="resetForm">
-            <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <div class="phone-input-container">
-                    <span class="phone-prefix">+263</span>
-                    <input
-                        type="tel"
-                        id="phone"
-                        name="phone"
-                        class="phone-input"
-                        placeholder="771234567"
-                        maxlength="9"
-                        pattern="[0-9]{9}"
-                        required
-                    />
+            <div class="input-group active" id="phoneGroup">
+                <div class="form-group">
+                    <label for="phone"><i class="fas fa-phone"></i> Phone Number</label>
+                    <div class="phone-input-container">
+                        <span class="phone-prefix">+263</span>
+                        <input
+                            type="tel"
+                            id="phone"
+                            name="phone"
+                            class="phone-input"
+                            placeholder="771234567"
+                            maxlength="9"
+                            pattern="[0-9]{9}"
+                        />
+                    </div>
+                    <div class="phone-hint">Enter your 9-digit Zimbabwe phone number (without +263)</div>
                 </div>
-                <div class="phone-hint">Enter your 9-digit Zimbabwe phone number (without +263)</div>
+            </div>
+
+            <div class="input-group" id="emailGroup">
+                <div class="form-group">
+                    <label for="email"><i class="fas fa-envelope"></i> Email Address</label>
+                    <input
+                        type="email"
+                        id="email"
+                        name="email"
+                        class="form-input"
+                        placeholder="your@email.com"
+                    />
+                    <div class="phone-hint">Enter your registered email address</div>
+                </div>
             </div>
 
             <button type="submit" class="btn-primary" id="submitBtn">
@@ -292,21 +358,67 @@
 
             // Clear any existing localStorage data
             localStorage.removeItem('resetPhone');
+            localStorage.removeItem('resetEmail');
             localStorage.removeItem('resetToken');
+            localStorage.removeItem('resetMethod');
+
+            // Method toggle
+            let currentMethod = 'phone';
+            const phoneMethodBtn = document.getElementById('phoneMethodBtn');
+            const emailMethodBtn = document.getElementById('emailMethodBtn');
+            const phoneGroup = document.getElementById('phoneGroup');
+            const emailGroup = document.getElementById('emailGroup');
+
+            phoneMethodBtn.addEventListener('click', function() {
+                currentMethod = 'phone';
+                phoneMethodBtn.classList.add('active');
+                emailMethodBtn.classList.remove('active');
+                phoneGroup.classList.add('active');
+                emailGroup.classList.remove('active');
+            });
+
+            emailMethodBtn.addEventListener('click', function() {
+                currentMethod = 'email';
+                emailMethodBtn.classList.add('active');
+                phoneMethodBtn.classList.remove('active');
+                emailGroup.classList.add('active');
+                phoneGroup.classList.remove('active');
+            });
 
             resetForm.addEventListener('submit', async function(e) {
                 e.preventDefault();
 
-                const phoneInput = document.getElementById('phone');
-                const phoneValue = phoneInput.value.trim();
+                let identifier, endpoint, storageKey, redirectUrl;
 
-                // Basic validation
-                if (!phoneValue || phoneValue.length !== 9 || !/^[0-9]{9}$/.test(phoneValue)) {
-                    showError('Please enter a valid 9-digit phone number');
-                    return;
+                if (currentMethod === 'phone') {
+                    const phoneInput = document.getElementById('phone');
+                    const phoneValue = phoneInput.value.trim();
+
+                    // Basic validation
+                    if (!phoneValue || phoneValue.length !== 9 || !/^[0-9]{9}$/.test(phoneValue)) {
+                        showError('Please enter a valid 9-digit phone number');
+                        return;
+                    }
+
+                    identifier = `+263${phoneValue}`;
+                    endpoint = 'https://zimcrowd-backend.vercel.app/api/phone-auth/forgot-password-phone';
+                    storageKey = 'resetPhone';
+                    redirectUrl = `password-reset-verify.html?phone=${encodeURIComponent(identifier)}`;
+                } else {
+                    const emailInput = document.getElementById('email');
+                    const emailValue = emailInput.value.trim();
+
+                    // Basic validation
+                    if (!emailValue || !/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(emailValue)) {
+                        showError('Please enter a valid email address');
+                        return;
+                    }
+
+                    identifier = emailValue;
+                    endpoint = 'https://zimcrowd-backend.vercel.app/api/email-auth/forgot-password-email';
+                    storageKey = 'resetEmail';
+                    redirectUrl = `password-reset-verify.html?email=${encodeURIComponent(identifier)}`;
                 }
-
-                const fullPhone = `+263${phoneValue}`;
 
                 // Show loading state
                 submitBtn.disabled = true;
@@ -315,26 +427,27 @@
 
                 try {
                     // Call the API to send reset code
-                    const response = await fetch('https://zimcrowd-backend.vercel.app/api/phone-auth/forgot-password-phone', {
+                    const body = currentMethod === 'phone' ? { phone: identifier } : { email: identifier };
+                    const response = await fetch(endpoint, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
                         },
-                        body: JSON.stringify({
-                            phone: fullPhone
-                        })
+                        body: JSON.stringify(body)
                     });
 
                     const data = await response.json();
 
                     if (data.success) {
-                        // Store phone for next step
-                        localStorage.setItem('resetPhone', fullPhone);
+                        // Store identifier and method for next step
+                        localStorage.setItem(storageKey, identifier);
+                        localStorage.setItem('resetMethod', currentMethod);
 
                         // Show success and redirect
-                        showSuccess('Reset code sent! Check your phone.');
+                        const message = currentMethod === 'phone' ? 'Reset code sent! Check your phone.' : 'Reset code sent! Check your email.';
+                        showSuccess(message);
                         setTimeout(() => {
-                            window.location.href = `phone-password-reset-verify.html?phone=${encodeURIComponent(fullPhone)}`;
+                            window.location.href = redirectUrl;
                         }, 2000);
                     } else {
                         showError(data.message || 'Failed to send reset code');
