Fix password toggle icon positioning and add debug logging for password reset

--- a/password-reset-new.html
+++ b/password-reset-new.html
@@ -146,7 +146,7 @@
             color: white;
         }
 
-        .toggle-password {
+        .password-toggle {
             position: absolute;
             right: 16px;
             top: 50%;
@@ -158,9 +158,10 @@
             font-size: 16px;
             transition: all 0.3s ease;
             padding: 8px;
+            z-index: 10;
         }
 
-        .toggle-password:hover {
+        .password-toggle:hover {
             color: #38e77b;
             filter: drop-shadow(0 0 8px rgba(56, 231, 123, 0.5));
         }
@@ -503,6 +504,8 @@
                         ? { phone: identifier, otp: resetToken, newPassword: newPassword }
                         : { email: identifier, otp: resetToken, newPassword: newPassword };
 
+                    console.log('Resetting password with:', { method, endpoint, body: { ...body, newPassword: '***' } });
+
                     const response = await fetch(endpoint, {
                         method: 'POST',
                         headers: {
@@ -512,6 +515,9 @@
                     });
 
                     const data = await response.json();
+                    
+                    console.log('Reset password response:', data);
+                    console.log('Response status:', response.status);
 
                     if (data.success) {
                         // Clear localStorage
@@ -525,7 +531,8 @@
                             window.location.href = 'login.html?message=password-reset-success';
                         }, 2000);
                     } else {
-                        showError(data.message || 'Failed to reset password');
+                        console.error('Reset failed:', data);
+                        showError(data.message || data.error || 'Failed to reset password');
                     }
                 } catch (error) {
                     console.error('Reset password error:', error);
